Desigh e Implementação de Profile e Claims completa, incluindo edição de perfil

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
@@ -57,7 +57,8 @@
 
                                 <div id="page-header" class="clearfix">
                                     <div class="page-header">
-                                        @Html.Partial("_LoginPartial")
+                                        @*@Html.PartialAsync("_LoginPartial")*@
+                                        <partial name="_LoginPartial" />
                                         <div>
                                             <a href="#" title="MedicalManagement-Sys - Home"><img src="/images/logo-pages.png" /></a>
                                         </div>
