--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,22 +11,32 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
 
-            <label>Imagem de Perfil:</label><br />
-            <div style="clear: both; float: left; margin-top: 15px; margin-bottom: 15px; padding-top: 10px; padding-left: 10px; border: 2px solid #00ffff; background-color: #76795d; width: 330px; height: 330px; border-radius: 3%; ">
+            <label>Imagem do Perfil:</label><br />
+
+            <div class="input-group" style=" clear: both; float: left; margin-bottom: 15px; margin-top: 15px; padding-top: 10px; padding-left: 10px; border-radius: 3%; border: 2px solid #00ffff; width: 340px; height:340px; background-color: #76795d">
+
                 @if (!string.IsNullOrEmpty(Model.Input.ImgProfilePath))
                 {
-                    <img src="/uploads/@Model.Input.ImgProfilePath" alt="Imagem de Perfil" style="clear: both; float: left; margin-right: 10px; border: 2px solid #eeeeee; width: 310px; height: 310px; border-radius: 50%; " />
+                    <img src="/uploads/@Model.Input.ImgProfilePath" alt="Imagem de Perfil" style=" clear: both; float: left; margin-right: 10px; border-radius: 50%; border: 2px solid #eeeeee; width: 310px; height: 310px;" />
                 }
                 else
                 {
-                    <img src="/img/avatars/foto-padrao.jpg" alt="Imagem de Perfil" style="clear: both; float: left; margin-right: 10px; border: 2px solid #eeeeee; width: 310px; height: 310px; border-radius: 50%; " />
+                    <img src="/img/avatars/foto-padrao.jpg" alt="Imagem de Perfil" style=" clear: both; float: left; margin-right: 10px; border-radius: 50%; border: 2px solid #eeeeee; width: 310px; height: 310px;" />
                 }
             </div>
 
             <br />
+
+            <div class="form-group">
+                <input type="file" name="file" />
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-info">Salvar</button>
+            </div>
 
             <div class="form-group">
                 <label asp-for="Username"></label>
@@ -73,7 +83,6 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
 </div>
