--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_Layout.cshtml
@@ -66,6 +66,9 @@
     <script src="/Scripts/cooperchip/modernizr-custom.js"></script>
 
 
+    <link href="~/css/cooperchip/CicleProfile.css" rel="stylesheet" />
+
+
 
 </head>
 
