--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
@@ -4,12 +4,10 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-
 @{
     Layout = null;
     ViewBag.Title = "MedicalManagement-Sys - Home";
 }
-
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -68,230 +66,81 @@
                                     <div class="wrapper">
                                         <br />
                                         <div class="row text-md-center text-sm-center text-xs-center">
-
-
                                             <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
                                                 <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/dashboard.png" class="card-img-top" style="width: 100%; height: auto" />
+                                                    <img src="~/images/dashboard.png" class="card-img-top" style="width: 100%; height: auto" />
                                                     <div class="card-img-overlay">
-
 
                                                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                                                         {
+
                                                             <div style="text-align: center">
                                                                 <a asp-controller="Home" asp-action="Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                    <h4 class="card-title">.:: Entrar ::.</h4>
+                                                                    <h4 class="card-title">.:: Entrar-Admin ::.</h4>
                                                                 </a>
                                                             </div>
+
                                                         }
                                                         else
                                                         {
                                                             <div style="text-align: center">
                                                                 <a asp-controller="Home" asp-action="BoxInit" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                    <h4 class="card-title">.:: Entrar ::.</h4>
+                                                                    <h4 class="card-title">.:: Entrar-Comum ::.</h4>
                                                                 </a>
                                                             </div>
                                                         }
 
-
                                                     </div>
                                                 </div>
                                             </div>
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/atualizacao_cadastral.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Registro de Pacientes</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
+                                            <index-home titulo="Registro de Pacientes" controlador="Home" visualizacao="Paciente" imagem="atualizacao_cadastral.png"></index-home>
 
-                                                </div>
-                                            </div>
+                                            <index-home titulo="Agenda" controlador="AgendaCalendar" visualizacao="Index" imagem="calendar.png"></index-home>
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/calendar.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Agenda</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <index-home titulo="Chamada Médico" controlador="Home" visualizacao="ChamadaMedico" imagem="examesdeimagens.png"></index-home>
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/examesdeimagens.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Chamada Médico</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
 
                                         </div>
 
-
-
                                         <div class="row text-center">
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/evolucao.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
+                                            <index-home titulo="Prontuários" controlador="Prontuario" visualizacao="ListaProntuario" imagem="evolucao.png"></index-home>
 
-                                                            <a href="/Home/Dashboard"
-                                                               style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Prontuários</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
+                                            <index-home titulo="Unidade Geográfica" controlador="UniGeog" visualizacao="Listar" imagem="prescricao.png"></index-home>
 
-                                                </div>
-                                            </div>
+                                            <index-home titulo="Base de Conhecimento" controlador="Home" visualizacao="BaseDeConhecimento" imagem="sinais_vitais.png"></index-home>
 
+                                            <index-home titulo="Mural de Avisos" controlador="Mural" visualizacao="Index" imagem="mural.png"></index-home>
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/prescricao.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Unidade Geográfica</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-
-
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/sinais_vitais.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Base de Conhecimento</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/mural.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Mural de Avisos</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
 
                                         </div>
 
 
                                         <div class="row text-center">
 
+                                            <index-home titulo="Int. Medicamentosa" controlador="Home" visualizacao="InteracaoMedicamentosa" imagem="interacao_medicamentosa.png"></index-home>
 
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/interacao_medicamentosa.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
+                                            <index-home titulo="Controle de Acesso" controlador="RolesAdmin" visualizacao="Index" imagem="niveldeacesso.png"></index-home>
 
-                                                            <a href="/Home/Dashboard"
-                                                               style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Int. Medicamentosas</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
+                                            <index-home titulo="Adm Usuários" controlador="UsersAdmin" visualizacao="Index" imagem="users.png"></index-home>
 
-                                                </div>
-                                            </div>
+                                            <index-home titulo="Configurações" controlador="Configuracoes" visualizacao="Index" imagem="config.png"></index-home>
 
-
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/niveldeacesso.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Controle de Acesso</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-
-
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/users.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Adm de Usuários</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-
-
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="/images/config.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-                                                        <div style="text-align: center">
-
-                                                            <a href="/Home/Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                <h4 class="card-title">Configurações</h4>
-                                                            </a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                            </div>
                                         </div>
+
                                     </div>
-
                                 </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
+
                 </div>
 
             </div>
 
         </div>
-
     </div>
 
     <div class="container">
@@ -300,9 +149,6 @@
         </div>
     </div>
 
-
-
-    <!-- Important javascript libs(put in all pages) -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="/assets/js/libs/jquery-2.1.1.min.js">\x3C/script>')
@@ -311,11 +157,6 @@
     <script>
         window.jQuery || document.write('<script src="/assets/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
     </script>
-    <!--[if lt IE 9]>
-      <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
-      <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-      <script type="text/javascript" src="/js/libs/respond.min.js"></script>
-    <![endif]-->
 
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <script src="/plugins/forms/validation/jquery.validate.js"></script>
