--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Index.cshtml
@@ -1,13 +1,10 @@
 ﻿
-@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
 
 @{
     Layout = null;
     ViewBag.Title = "MedicalManagement-Sys - Home";
 }
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -28,8 +25,8 @@
 
     <link href="/css/cooperchip/box-img-text.css" rel="stylesheet" type="text/css" />
 
-    <link href="~/Content/fullcalendar.css" rel="stylesheet" />
-    <link href="~/Content/fullcalendar.print.css" rel="stylesheet" />
+    <link href="/Content/fullcalendar.css" rel="stylesheet" />
+    <link href="/Content/fullcalendar.print.css" rel="stylesheet" />
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/ico/apple-touch-icon-114-precomposed.png">
@@ -55,92 +52,27 @@
 
                                 <div id="page-header" class="clearfix">
                                     <div class="page-header">
-                                        @*@Html.PartialAsync("_LoginPartial")*@
+
                                         <partial name="_LoginPartial" />
+
                                         <div>
                                             <a href="#" title="MedicalManagement-Sys - Home"><img src="/images/logo-pages.png" /></a>
                                         </div>
                                     </div>
 
+                                    <partial name="_IndexHome" />
 
-                                    <div class="wrapper">
-                                        <br />
-                                        <div class="row text-md-center text-sm-center text-xs-center">
-                                            <div class="col-md-3 col-sm-3 col-sx-12" style="padding-bottom: 15px;">
-                                                <div class="card card-inverse text-md-center text-sm-center text-xs-center">
-                                                    <img src="~/images/dashboard.png" class="card-img-top" style="width: 100%; height: auto" />
-                                                    <div class="card-img-overlay">
-
-                                                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
-                                                        {
-
-                                                            <div style="text-align: center">
-                                                                <a asp-controller="Home" asp-action="Dashboard" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                    <h4 class="card-title">.:: Entrar-Admin ::.</h4>
-                                                                </a>
-                                                            </div>
-
-                                                        }
-                                                        else
-                                                        {
-                                                            <div style="text-align: center">
-                                                                <a asp-controller="Home" asp-action="BoxInit" style="text-decoration: none; color: #ed5353; font-size: 16px;">
-                                                                    <h4 class="card-title">.:: Entrar-Comum ::.</h4>
-                                                                </a>
-                                                            </div>
-                                                        }
-
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <index-home titulo="Registro de Pacientes" controlador="Home" visualizacao="Paciente" imagem="atualizacao_cadastral.png"></index-home>
-
-                                            <index-home titulo="Agenda" controlador="AgendaCalendar" visualizacao="Index" imagem="calendar.png"></index-home>
-
-                                            <index-home titulo="Chamada Médico" controlador="Home" visualizacao="ChamadaMedico" imagem="examesdeimagens.png"></index-home>
-
-
-                                        </div>
-
-                                        <div class="row text-center">
-
-                                            <index-home titulo="Prontuários" controlador="Prontuario" visualizacao="ListaProntuario" imagem="evolucao.png"></index-home>
-
-                                            <index-home titulo="Unidade Geográfica" controlador="UniGeog" visualizacao="Listar" imagem="prescricao.png"></index-home>
-
-                                            <index-home titulo="Base de Conhecimento" controlador="Home" visualizacao="BaseDeConhecimento" imagem="sinais_vitais.png"></index-home>
-
-                                            <index-home titulo="Mural de Avisos" controlador="Mural" visualizacao="Index" imagem="mural.png"></index-home>
-
-
-                                        </div>
-
-
-                                        <div class="row text-center">
-
-                                            <index-home titulo="Int. Medicamentosa" controlador="Home" visualizacao="InteracaoMedicamentosa" imagem="interacao_medicamentosa.png"></index-home>
-
-                                            <index-home titulo="Controle de Acesso" controlador="RolesAdmin" visualizacao="Index" imagem="niveldeacesso.png"></index-home>
-
-                                            <index-home titulo="Adm Usuários" controlador="UsersAdmin" visualizacao="Index" imagem="users.png"></index-home>
-
-                                            <index-home titulo="Configurações" controlador="Configuracoes" visualizacao="Index" imagem="config.png"></index-home>
-
-                                        </div>
-
-                                    </div>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
 
                 </div>
-
             </div>
 
         </div>
+
     </div>
 
     <div class="container">
@@ -149,14 +81,21 @@
         </div>
     </div>
 
+
+    <!-- Important javascript libs(put in all pages) -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="/assets/js/libs/jquery-2.1.1.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="/js/libs/jquery-2.1.1.min.js">\x3C/script>')
     </script>
     <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script>
-        window.jQuery || document.write('<script src="/assets/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
     </script>
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
+    <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script type="text/javascript" src="/js/libs/respond.min.js"></script>
+    <![endif]-->
 
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <script src="/plugins/forms/validation/jquery.validate.js"></script>
