Created new Features to ServicoApplicacaoPaciente

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Details.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cooperchip.ITDeveloper.Domain.Models.Cid
+﻿@model Cooperchip.ITDeveloper.Domain.Entities.Cid
 
 @{
     ViewBag.Title = "Detalhes do Genérico: [ " + Model.Diagnostico.ToUpper() + " ]";
