--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using X.PagedList.Mvc.Core;
-@model X.PagedList.IPagedList<Cooperchip.ITDeveloper.Domain.Models.Cid>
+@model X.PagedList.IPagedList<Cooperchip.ITDeveloper.Domain.Entities.Cid>
 
 @{
     ViewData["Title"] = "Medical Management Sys - Lista de CID";
