--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Contato.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Contato.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model Cooperchip.ITDeveloper.Mvc.ViewModels.ContatoViewModel
+@model             ContatoViewModel
 
 @{
     ViewData["Title"] = "Fale Conosco";
