--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Create.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@using Cooperchip.ITDeveloper.Domain.Enums
-@model Cooperchip.ITDeveloper.Domain.Models.Paciente
+@model Cooperchip.ITDeveloper.Domain.Entities.Paciente
 
 @{
     ViewData["Title"] = "Adicionar Paciente";
 }
 
-    <vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
+<vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
 
-    </vc:cabecalho>
+</vc:cabecalho>
 
 <div class="row">
     <div class="panel panel-heading">
@@ -25,7 +25,7 @@
                     <input type="submit" value="Adicionar Paciente" class="btn btn-success" />
                     <a asp-controller="Paciente" asp-action="Index" class="btn btn-info">Voltar à lista</a>
                 </div>
-                
+
 
             </form>
         </div>
@@ -37,4 +37,9 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    @* Bundle  dataTable *@
+    <script src="/bundle/dataTables.min.js"></script>
+    <script src="~/bundle/dashboard.min.js"></script>
+
 }
