--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Edit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cooperchip.ITDeveloper.Domain.Models.Cid
+﻿@model Cooperchip.ITDeveloper.Domain.Entities.Cid
 
 @{
     ViewBag.Title = "Edição da CID: [ " + Model.Diagnostico.ToUpper() + " ]";
