--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Delete.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Delete.cshtml
@@ -1,12 +1,12 @@
-﻿@model Cooperchip.ITDeveloper.Domain.Models.Paciente
+﻿@model Cooperchip.ITDeveloper.Domain.Entities.Paciente
 
 @{
     ViewData["Title"] = "Exclusão de Paciente";
 }
 
-    <vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
+<vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
 
-    </vc:cabecalho>
+</vc:cabecalho>
 
 <div class="row">
     <div class="panel panel-heading">
@@ -16,7 +16,7 @@
     <div class="panel panel-body">
         <div>
             <div>
-                <partial name="_delete_details"/>
+                <partial name="_delete_details" />
             </div>
 
             <form asp-controller="Paciente" asp-action="Delete">
@@ -28,3 +28,10 @@
 
     </div>
 </div>
+
+@section Scripts{
+
+    @* Bundle  dataTable *@
+    <script src="/bundle/dataTables.min.js"></script>
+    <script src="~/bundle/dashboard.min.js"></script>
+}
