--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_contato.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_contato.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-@model Cooperchip.ITDeveloper.Mvc.ViewModels.ContatoViewModel
+@model             ContatoViewModel
 
 <div class="form-group">
     <label asp-for="Email" class="control-label"></label>
