--- a/src/Cooperchip.ITDeveloper.Mvc/Views/_ViewImports.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Cooperchip.ITDeveloper.Mvc
-@using Cooperchip.ITDeveloper.Mvc.Models
+@using Cooperchip.ITDeveloper.Application.ViewModels
 @using Cooperchip.ITDeveloper.Mvc.Extensions.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper "*, Cooperchip.ITDeveloper.Mvc"
