Implemented Domain Service

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Delete.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cooperchip.ITDeveloper.Domain.Entities.Paciente
+﻿@model Cooperchip.ITDeveloper.Application.ViewModels.PacienteViewModel
 
 @{
     ViewData["Title"] = "Exclusão de Paciente";
