--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Cooperchip.ITDeveloper.Domain.Enums
-@model Cooperchip.ITDeveloper.Domain.Entities.Paciente
+@model Cooperchip.ITDeveloper.Application.ViewModels.PacienteViewModel
 
 @{
     ViewData["Title"] = "Editar Paciente";
