--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_edit_create.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_edit_create.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using Cooperchip.ITDeveloper.Domain.Enums
-@model Cooperchip.ITDeveloper.Domain.Entities.Paciente
+@model Cooperchip.ITDeveloper.Application.ViewModels.PacienteViewModel
 
 <div class="form-group">
     <label asp-for="Nome" class="control-label"></label>
