--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_profile_left_sidebar.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_profile_left_sidebar.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@inject Cooperchip.ITDeveloper.Domain.Interfaces.IUserInContext _userInContext
+@inject Cooperchip.ITDeveloper.Domain.Interfaces.Helpers.IUserInContext _userInContext
 
 <div class="sidebar-panel"><h5 class="sidebar-panel-title">Profile</h5></div>
 
