Pequeno ajuste no layout da Index de Paciente

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
@@ -101,7 +101,10 @@
 @section Scripts {
 
     @* Bundle  dataTable *@
-    <script src="/bundle/dataTables.min.js"></script>
+    <script src="~/bundle/dataTables.min.js"></script>
+    @*<script src="~/bundle/dashboard.min.js"></script>*@
+
+
 
     <script>
         $(document).ready(function () {
@@ -113,7 +116,5 @@
             });
         });
     </script>
-
-    <script src="~/bundle/dashboard.min.js"></script>
 
 }
