Auditando registro completo. ViewModel e Views de Edit e Detail de Paciente  Ok

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_delete_details.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_delete_details.cshtml
@@ -29,6 +29,23 @@
     <dt>@Html.DisplayNameFor(model => model.EstadoPaciente.Descricao)</dt>
     <dd>@Html.DisplayFor(model => model.EstadoPaciente.Descricao)</dd>
 
+
+
+    <dt>@Html.DisplayNameFor(model => model.DataInclusao)</dt>
+    <dd>@Html.DisplayFor(model => model.DataInclusao)</dd>
+
+    <dt>@Html.DisplayNameFor(model => model.UsuarioInclusao)</dt>
+    <dd>@Html.DisplayFor(model => model.UsuarioInclusao)</dd>
+
+    <dt>@Html.DisplayNameFor(model => model.DataUltimaModificacao)</dt>
+    <dd>@Html.DisplayFor(model => model.DataUltimaModificacao)</dd>
+
+    <dt>@Html.DisplayNameFor(model => model.UsuarioUltimaModificacao)</dt>
+    <dd>@Html.DisplayFor(model => model.UsuarioUltimaModificacao)</dd>
+
+
+
+
     <dt>@Html.DisplayNameFor(model => model.Rg)</dt>
     <dd>@Html.DisplayFor(model => model.Rg)</dd>
 
