--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
@@ -21,6 +21,32 @@
 
                 <partial name="_edit_create" />
 
+
+                <div class="form-group">
+                    <label asp-for="DataInclusao" class="control-label"></label>
+                    <input asp-for="DataInclusao" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="DataInclusao" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="UsuarioInclusao" class="control-label"></label>
+                    <input asp-for="UsuarioInclusao" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="UsuarioInclusao" class="text-danger"></span>
+                </div>
+
+
+                <div class="form-group">
+                    <label asp-for="DataUltimaModificacao" class="control-label"></label>
+                    <input asp-for="DataUltimaModificacao" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="DataUltimaModificacao" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="UsuarioUltimaModificacao" class="control-label"></label>
+                    <input asp-for="UsuarioUltimaModificacao" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="UsuarioUltimaModificacao" class="text-danger"></span>
+                </div>
+
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <input type="submit" value="Salvar" class="btn btn-success" />
