Notification Pattern Implemented => NeedTests

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Edit.cshtml
@@ -19,6 +19,8 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+                <vc:summary></vc:summary>
+
                 <partial name="_edit_create" />
 
 
