--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Create.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Create.cshtml
@@ -19,6 +19,8 @@
             <form asp-controller="Paciente" asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+                <vc:summary></vc:summary>
+
                 <partial name="_edit_create" />
 
                 <div class="form-group">
