--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
@@ -12,6 +12,9 @@
 
 
 <div class="panel panel-default panel-controls">
+
+    <vc:summary></vc:summary>
+
     <div class="panel panel-heading">
         <h3>Lista de Pacientes</h3>
     </div>
