Interface e Classe de Repositório para Triagem

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/Index.cshtml
@@ -36,7 +36,7 @@
                     </th>
 
                     <th>
-                        @Html.DisplayNameFor(model => model.Ativo)
+                        @Html.DisplayNameFor(model => model.Motivo)
                     </th>
 
                     <th>
@@ -69,7 +69,7 @@
                         </td>
 
                         <td>
-                            @Html.DisplayFor(modelItem => item.Ativo)
+                            @Html.DisplayFor(modelItem => item.Motivo)
                         </td>
 
                         <td>
