--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_delete_details.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_delete_details.cshtml
@@ -54,4 +54,8 @@
 
     <dt>@Html.DisplayNameFor(model => model.RgDataEmissao)</dt>
     <dd>@Html.DisplayFor(model => model.RgDataEmissao)</dd>
+    
+    <dt>@Html.DisplayNameFor(model => model.Motivo)</dt>
+    <dd>@Html.DisplayFor(model => model.Motivo)</dd>
+
 </dl>
