--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_edit_create.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Paciente/_edit_create.cshtml
@@ -84,3 +84,9 @@
     <input asp-for="RgDataEmissao" class="form-control" />
     <span asp-validation-for="RgDataEmissao" class="text-danger"></span>
 </div>
+
+<div class="form-group">
+    <label asp-for="Motivo" class="control-label"></label>
+    <input asp-for="Motivo" class="form-control" />
+    <span asp-validation-for="Motivo" class="text-danger"></span>
+</div>
