--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_navbar.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_navbar.cshtml
@@ -34,7 +34,8 @@
                 <ul class="dropdown-menu right dropdown-notification" role="menu">
                     <li>
                         <a href="#" class="dropdown-menu-header">Notifications</a>
-                    </li>
+@*                        <vc:notify-events></vc:notify-events>
+*@                    </li>
                     <li>
                         <a href="#"><i class="l-basic-life-buoy"></i> 2 support request</a>
                     </li>
