new Triagem of Event and Adjust KissLog

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
@@ -40,6 +40,10 @@
         </li>
 
         <li>
+            <a asp-area="" asp-controller="Triagem" asp-action="Index"><span class="txt">Notif. Triagem</span></a>
+        </li>
+
+        <li>
             <a asp-controller="EstadoPaciente" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Estado Pacientes</span></a>
         </li>
 
