--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Triagem/Triagem.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Triagem/Triagem.cshtml
@@ -62,7 +62,7 @@
                     </td>
 
                     <td>
-                        @Model.CodigoPaciente
+                        @Model.Mensagem
                     </td>
 
                     <td class="text-right">
