Finalizando nossa App de Postit dentro da nossa aplicação!

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Details.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Details.cshtml
@@ -28,6 +28,10 @@
 
                         <dt>@Html.DisplayNameFor(model => model.Autor)</dt>
                         <dd>@Html.DisplayFor(model => model.Autor)</dd>
+
+                        <dt>@Html.DisplayNameFor(model => model.Email)</dt>
+                        <dd>@Html.DisplayFor(model => model.Email)</dd>
+
                     </dl>
                 </div>
             </div>
