--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Index.cshtml
@@ -50,6 +50,7 @@
                                     <small>@item.Data</small>
                                     <h4>@item.Titulo</h4>
                                     <p>@item.Aviso</p>
+                                    <p>@item.Email</p>
                                     <h6>Por: @item.Autor</h6>
                                     <a class="delete" data-toggle="tooltip" data-placement="bottom" title="Excluir Aviso" data-original-title="Excluir Aviso" data-id="@item.Id"><i class="fa fa-trash-o "></i></a>
                                 </div>
