--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Create.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Create.cshtml
@@ -47,6 +47,14 @@
                         </div>
 
                         <div class="form-group">
+                            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             @Html.LabelFor(model => model.Autor, htmlAttributes: new { @class = "control-label col-md-3"})
                             <div class="col-md-5">
                                 @Html.EditorFor(model => model.Autor, new { htmlAttributes = new { @class = "form-control" } })
