--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Edit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Mural/Edit.cshtml
@@ -58,6 +58,14 @@
                         </div>
 
                         <div class="form-group">
+                            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <input type="submit" value="Atualizar" class="btn btn-primary" />
                             </div>
